# classifinder-engine

./: ATTRIBUTION.md  CONTRIBUTING.md  Dockerfile  README.md  decoders.py  entropy.py  false_positives.py  pyproject.toml  redactor.py  scanner.py
classifinder_engine/: __init__.py  false_positives.py  redactor.py  scanner.py
classifinder_engine/data/: fp_wordlist.txt
classifinder_engine/patterns/: ai.py  cloud.py  database.py  generic.py  prompt_injection.py  registry.py
patterns/: ai.py  cloud.py  comms.py  database.py  generic.py  payment.py  registry.py  vcs.py
scripts/: add_source_comments.py  check_pattern_provenance.py  redos_audit.py
tests/: conftest.py  test_entropy.py  test_patterns.py  test_redactor.py  test_scanner.py
